// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`edit value 1`] = `
<Provider
  store={
    Object {
      "actions": Array [
        Object {
          "type": "LOAD_STATE",
        },
        Object {
          "path": Array [
            "value",
          ],
          "type": "SET_PROP",
          "value": "Hello world",
        },
      ],
      "dispatch": [Function],
      "getState": [Function],
      "logicMiddleware": [Function],
      "replaceReducer": [Function],
      "resetActions": [Function],
      "subscribe": [Function],
      "whenComplete": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(App)>
    <App
      loadState={[Function]}
      setProp={[Function]}
      value="Hello world"
    >
      <Row
        gutter={16}
      >
        <div
          className="ant-row"
          style={
            Object {
              "marginLeft": -8,
              "marginRight": -8,
            }
          }
        >
          <Col
            span={6}
            style={
              Object {
                "paddingLeft": 8,
                "paddingRight": 8,
              }
            }
          >
            <div
              className="ant-col-6"
              style={
                Object {
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <TextArea
                onChange={[Function]}
                prefixCls="ant-input"
                rows={6}
                value="Hello world"
              >
                <textarea
                  className="ant-input"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  rows={6}
                  style={Object {}}
                  value="Hello world"
                />
              </TextArea>
            </div>
          </Col>
          <Col
            span={18}
            style={
              Object {
                "paddingLeft": 8,
                "paddingRight": 8,
              }
            }
          >
            <div
              className="ant-col-18"
              style={
                Object {
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <h1>
                Hello mermaid live editor!
              </h1>
              <pre>
                Hello world
              </pre>
            </div>
          </Col>
        </div>
      </Row>
    </App>
  </Connect(App)>
</Provider>
`;

exports[`load state 1`] = `
<Provider
  store={
    Object {
      "actions": Array [
        Object {
          "type": "LOAD_STATE",
        },
        Object {
          "state": Object {
            "value": "graph LR
    A-->B",
          },
          "type": "SET_STATE",
        },
      ],
      "dispatch": [Function],
      "getState": [Function],
      "logicMiddleware": [Function],
      "replaceReducer": [Function],
      "resetActions": [Function],
      "subscribe": [Function],
      "whenComplete": [Function],
      Symbol(observable): [Function],
    }
  }
>
  <Connect(App)>
    <App
      loadState={[Function]}
      setProp={[Function]}
      value="graph LR
    A-->B"
    >
      <Row
        gutter={16}
      >
        <div
          className="ant-row"
          style={
            Object {
              "marginLeft": -8,
              "marginRight": -8,
            }
          }
        >
          <Col
            span={6}
            style={
              Object {
                "paddingLeft": 8,
                "paddingRight": 8,
              }
            }
          >
            <div
              className="ant-col-6"
              style={
                Object {
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <TextArea
                onChange={[Function]}
                prefixCls="ant-input"
                rows={6}
                value="graph LR
              A-->B"
              >
                <textarea
                  className="ant-input"
                  onChange={[Function]}
                  onKeyDown={[Function]}
                  rows={6}
                  style={Object {}}
                  value="graph LR
                A-->B"
                />
              </TextArea>
            </div>
          </Col>
          <Col
            span={18}
            style={
              Object {
                "paddingLeft": 8,
                "paddingRight": 8,
              }
            }
          >
            <div
              className="ant-col-18"
              style={
                Object {
                  "paddingLeft": 8,
                  "paddingRight": 8,
                }
              }
            >
              <h1>
                Hello mermaid live editor!
              </h1>
              <pre>
                graph LR
                A--&gt;B
              </pre>
            </div>
          </Col>
        </div>
      </Row>
    </App>
  </Connect(App)>
</Provider>
`;
